# GAGB

./: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/routes/: analysis.py  games.py  news.py  odds.py  parlays.py
backend/app/core/: database.py  models.py
backend/app/services/: ai_service.py  news_service.py  parlay_service.py  sportsbook_service.py
frontend/: app.py
frontend/components/: analysis_display.py  game_selector.py  odds_display.py  parlay_builder.py
frontend/utils/: api_client.py
