[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gagb"
version = "0.1.0"
description = "Generative AI Gambling Bot - A sports betting decision assistant"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "GAGB Team" },
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "httpx>=0.24.1",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "gradio>=3.40.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.5.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "ruff>=0.0.270",
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = "test_*.py"

[tool.hatch.build.targets.wheel]
packages = ["backend", "frontend"]
